<resources>
    <string name="app_name">SWA Mobile Team</string>

    <!-- Authorization -->
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="msg_wrong_username">Wrong username or password</string>
    <string name="msg_no_username">Enter username</string>
    <string name="msg_no_password">Enter password</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_contact_operator">Contact control operator</string>
    <string name="text_forgot_password">Forgot your password?</string>
    <string name="text_restore"><b>Restore</b></string>
    <string name="text_sign_up"><u>SIGN UP</u></string>
    <string name="msg_loading_dialog">Please wait, authorization is in process</string>

    <!-- Deliveries list -->
    <string name="text_deliveries">Deliveries</string>
    <string name="text_bulater">Bulat Khabiroff</string>
    <string name="msg_no_deliveries">No deliveries</string>
    <string name="text_parcel_id">Parcel #%1$s</string>
    <string name="text_delivery_small">Small box %1$s kg</string>
    <string name="text_delivery_large">Large box %1$s kg</string>
    <string name="text_finish">Finish</string>
    <string name="text_mark_as_current">Mark as current task</string>
    <string name="text_details">Details</string>
    <string name="text_estimated_time">Time remaining: %1$s min</string>

    <!-- Delivery -->
    <string name="text_time_remaining">%1$d mins remaining</string>
    <string name="text_dimensions">%1$d * %2$d * %3$d</string>
    <string name="text_to_map">Open map</string>

</resources>
