<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="140dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_login_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:theme="@style/AuthEdit"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_login_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_username"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorAdditionalInfo"
                    app:fontFamily="Roboto" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:theme="@style/AuthEdit"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login_wrapper">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:imeOptions="actionNext|flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorAdditionalInfo"
                    app:fontFamily="Roboto" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorWhite"
                android:text="@string/text_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_password_wrapper" />

            <Button
                android:id="@+id/button_contact"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorContactButton"
                android:text="@string/text_contact_operator"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/button_sign_in"
                app:layout_constraintStart_toStartOf="@id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

            <TextView
                android:id="@+id/text_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="7pt"
                app:fontFamily="Roboto"
                app:layout_constraintStart_toStartOf="@id/button_contact"
                app:layout_constraintTop_toBottomOf="@id/button_contact" />

            <TextView
                android:id="@+id/text_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_horizontal"
                android:text="@string/text_restore"
                android:textColor="@color/colorWhite"
                android:textSize="7pt"
                android:textStyle="bold"
                app:fontFamily="Roboto"
                app:layout_constraintStart_toEndOf="@id/text_forgot"
                app:layout_constraintTop_toTopOf="@id/text_forgot" />

            <TextView
                android:id="@+id/text_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_up"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="7pt"
                app:fontFamily="Roboto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_restore" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>